Update style of application Vol 3

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     -->
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <link
-    href="https://fonts.googleapis.com/css?family=Oswald&display=swap"
+    href="https://fonts.googleapis.com/css?family=Oswald|Fira+Sans&display=swap"
     rel="stylesheet"
   />
   <!--
